# ChangeLog for dev-ml/macaque
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/macaque/ChangeLog,v 1.1 2013/02/07 20:43:32 aballier Exp $

*macaque-0.6.1 (07 Feb 2013)

  07 Feb 2013; Alexis Ballier <aballier@gentoo.org> +macaque-0.6.1.ebuild,
  +metadata.xml:
  Initial import, bug #437318, ebuild by Jacques-Pascal Deplaix
