@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST macaque-0.6.1.tar.gz 59851 SHA256 4a91465c99c2d98f4b459729f02bc8f0ed3c0dac896829940ea74b4e53d1e7e2 SHA512 d4af100a6eb2529515b23aa5a5f975099c1b8bb9db46ac7280d59c6759c04a6fec98c30388fa2a8e46b90a3d4331608ae81d5d1cd5c2e053a502a3bd496058c8 WHIRLPOOL 4f891df191880d61f524b3f653697661f6a3225018582cb7a55ca7bfda6efbd7275bfa9d1445bd7059ed5ed6037402d2a4abd7883042bc992618bce747e46f55
+DIST macaque-0.7.1.tar.gz 105838 SHA256 0a27c737182f700854dd6d81ec416fd03c05f311e81e89f28ed76576df1dd872 SHA512 da6684b03d7871b6600dfff8df43c05895d4eb73ad0769457ab229fda642fb7c46465d25792fff1b3e81c169f4a807485fab4e301f2674b6246359f9d5513256 WHIRLPOOL 269f3be7ac291679a73b702fd47b3fb348eb7688816e107b650c0662c281d86dbe2cdb647234ea5fc99740b57c685262056bb256c744e31229e67dd18b5ceb6a
 EBUILD macaque-0.6.1.ebuild 705 SHA256 97f15cb6d7689329090c83b4d17dbc6892413a8e089263480ccff4322cd62575 SHA512 b5ca2ad432ce9fb3ca7db5fc6bdd00b225a7a81c6c35bd24f7a5a8c10447f259fe7d88c47af37ab10da61fe104314d2eee537dd478f5fc7f4ae553fa3823a52a WHIRLPOOL a527448376932bd982cdd3346110132fed9e69ba6cf295dcc8b31643affdb4b05b05dad178c182e7fbfdbf57f825b35543b6c11d87de09feddc1c7894930e996
-MISC ChangeLog 390 SHA256 486b863a0a8a644cf5503f3576760a5ad5353faf4a71f9f09d9684c57755c2d6 SHA512 4b29afcd613134808b4f9bc3646c7d19654758bdbe21d1a203a0f1b47ddee5998e683b355b17ea5b7b7f1fcbb902eab54537a676160dc5297edc1bda31d78296 WHIRLPOOL 450f4ad3fe77f7e661cf4c62da7b5cab38c0c709333dad70c89c00d94955a71c9544b17895cafd0c25d73e38d3ecdda9f9f20a43bdc2b958817fd9a6ed61dec2
+EBUILD macaque-0.7.1.ebuild 618 SHA256 8d2f772575210e992319407ba83f9f3469e9424951c016241739e4a9e27f478b SHA512 280120855e54b093bad1c4da2a635eda8b50149ce8eab1fdb62a516ba270e5eaa4c3a50b4d69d8cfc2522551feb80c2f3f663f934e71ec81ee17c4c893b4cd76 WHIRLPOOL c8272bb61cd494a91002089ae5a58f3af26ab98d2d7985aa87d1b4f06312a361c632647cbcaa6f4dd8fed322347a2006ff64550b0f4fd99adc0ee31d4f460625
+MISC ChangeLog 511 SHA256 40815f6ef971bf6e2a1962d4915fe19a7b3bebe297e2443aa66c7d6e81f56fdd SHA512 e69be8b6db392d495987b1a551fa89636aa4a595f683e5f704771c54930de8760f3a90e42113454bf32c564a99cc966d02bd8b7f0a6c0b5f4910001e49dbf05d WHIRLPOOL 1c7b38fb54ea4284bab99ca1e42018484640c3d6feb3f80aab5a7145660ba2257b53b3def8b5203d72735fb6224f3a56af74d37d9e1aa78ced273b3262077de7
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlEUEfUACgkQvFcC4BYPU0p2YQCfSGhLgAa0JMJo/9CkHUcBCDzs
-DwgAn1sNWLp7tcMTu7Tfv8nYkzsmhP59
-=pSz0
+iEYEAREIAAYFAlRR8soACgkQvFcC4BYPU0p4NgCffCh3uTyjxGn7BLXTF7aA34e7
+4Q4AnR/5qsBbenn1a3oZL/egjhh4c6Es
+=YNRu
 -----END PGP SIGNATURE-----
