@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST pgocaml-1.7.1.tgz 79890 SHA256 f7c843032455f83c8d1f15de9a7012441ab28e5ec6d06deabb2526859a4afb55 SHA512 47b99bebc27dc64641cab65890e89217d1f256bac953b33a01dcf62c838b251d49097c88642a3b14f6325941c2b2f97b68f14209463f431000587b3d20ff5372 WHIRLPOOL bd2ae32896aed6d7d19baaffffc5ba8815c3be6296984835b531161beb443d360a0b401192f5dc6a8c5a68825b63376b4e03842d72143ab1e060ffd9b6845e85
+DIST pgocaml-2.1.tgz 88596 SHA256 d547490fd8b4a7f6c739d919a90af8b952af78f47367a5dc45e59f0a2b85fc54 SHA512 55138dac355a060d8f6cc234fa1954d2af453a2265d6b1cbe332db11cc04754c844d830233af0f6a3faf223adf6f22e52704f389b59974db4d51c386a6ee43d7 WHIRLPOOL 6e807d47e0dc539dc70b554bd7b37bff9c5df05d7269e3593179260600bec6ae70f5ee6fb3f2bf6278335240d12936380100e38a3f99147ab2d453f618a2d426
 EBUILD pgocaml-1.7.1.ebuild 763 SHA256 4bb5fee77a7b8a486a0433713bbb7e1b552c5d9d95bfb903c1103e7d83989c58 SHA512 b60be5dd11cbb06051978eed2efa54dfa9c0e403e45e788992af9bbdfaa69b3b0efcf7e6e99204bc1a321108da0d7f0cdd5e89f32fa26a90c002a2c2ccc6bcce WHIRLPOOL a69236d405353836d6fd9372802ab528a7a14e7068f151719a0ed971051011e384690f86bd98c4623fb1097fa13d9bacaf5a52094a60e0283dd1cb203477bdfe
-MISC ChangeLog 932 SHA256 b287c25baa8d2edfa7c31ec9d1301f25b81bc62b84db870dfa0dcc484e1787a5 SHA512 e327334eb1af019743775393d7bf24d086d564bdb6483f632f04078e8437f5a6a120c288b70a23238fa2ea3eccab324981b4fb1317ac5426b27af197db7e932e WHIRLPOOL 956d728112352e24870771b1a4e540fe5d59548e12e94ed81b8c43d51c740238ee37cc3f51e2f5a3ac3a7701db457e98ee3b7a38dc3bb1da1abeae2830a7991b
+EBUILD pgocaml-2.1.ebuild 794 SHA256 94fc68272053132bfc2aad9140b188df76a4b1a68d4f1289c51d9937855dbc62 SHA512 d8790f48d26fa2ecc151933ce6d15ecea7283cf6db88be71efea237bba76c89f19796ef71a6f72033f4f84d312ceeb08b4087e1f73303312cd14cfb382ee918f WHIRLPOOL 8af6e5fc4920b85788a35cf607934f3469c1884bd42bb91859d7712e4b21073a703719cdf30f31145f8c8f160bd35860d2a8f32cb59c89f598be11d4c6cf0820
+MISC ChangeLog 1049 SHA256 8a558c069150e549e2d6b7bab7dc744bf21bc40241300c9ea9994bd89e352771 SHA512 e74f62ba03984998b21c05eddafed5628752623421492012429149a3581fc4892ec00419dc62cfb7e993b45d6e32ea9203fcd66aa54a2ebb7622071b6be34e1e WHIRLPOOL bf13cf40e007f65faab92375bd01f75ae0eaabd3cc4fe6832d5e63c7e45db0d158e22cc35647fa291b8ed49c638b8893362ea123b325083f8820773b0d587ab5
 MISC metadata.xml 248 SHA256 3956a9aa6a48030832f6aa3f0eff5550ec76cfd006c541d8cac7ab35ab0a314b SHA512 f9babb9dd5f2319ffb213f9a5afdb6fb1eff01c1931d3a70167f85fcc497102e503f98529b89afe54abd92e000f7ac5bec0c76e292ae56803266d5b4c9cc0e7a WHIRLPOOL ccb07024ddd76ab452a702ca69ab617928ba7c0578b10c3c5164774dda39530cf35f7f553fe0532e47e14939dc880b9a5dae707a002ef20b93ebd482c9221184
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlISJFsACgkQvFcC4BYPU0oX2gCeO4PBzXhgjG+ycx67pOx0tPow
-IUMAoMxi8+9MfMzj3g1KOlhoavPQppq6
-=vBpI
+iEYEAREIAAYFAlRR8jAACgkQvFcC4BYPU0qUagCgivNd/mYo0kI+dEsUiTX1UtU7
+R48An26RVts5GaYV9S4qFKyJy6eh2l8T
+=3Wg+
 -----END PGP SIGNATURE-----
